--- a/main.html
+++ b/main.html
@@ -10,7 +10,49 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<form>
+<label for="name">Name :</label>
+	<input type="text" id="name" required placeholder="Name">
+<br>
+		<label for="email">Email :</label>
+	<input type="email" id="email" required placeholder="Email">
+<br>
 
+		<label for="name">Gender :</label>
+		<lable for="gender-m">Male</lable>
+	<input type="radio" id="gender-m" name="gender"required>
+		<lable for="gender-f">Female</lable>
+		
+	<input type="radio" id="gender-f" name="gender"required>
+<br>
+	
+		<label for="car">Car Brands</label>
+<select name="place id="place>
+	<option value="BMW" >BMW</option>
+	<option value="Lemborgini">Lemborgini</option>
+	<option value="mercedes">Mercides</option>
+	<option value="Ferrari">Ferrari</option>
+</select>
+<br>
+	
+		<label for="age">Age</label>
+	<input type="number" id="age" required placeholder="Age"> 
+	<label for="dob">DOB</label>
+	<input text="date" id="dob" required >
+<br>
+	
+		<label for="tel">Phone Number</label>
+	<input type="number" id="tel" required placeholder="xxx-xxx-xxxx">
+<br>
+	
+		<label for="password">Password</label>
+	<input type="password" id="password" required placeholder="Password">
+<br>
+	
+		<label for="check">I agreee to TOS</label>
+	<input type="checkbox" id="tos" required>
+		<input type="submit" value="submit">
+</form>
 </body>
 
 </html>
