--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-	<form>
+	<form method="post">
 <label for="name">Name :</label>
 	<input type="text" id="name" required placeholder="Name">
 <br>
