--- a/main.html
+++ b/main.html
@@ -49,7 +49,7 @@
 	<input type="password" id="password" required placeholder="Password">
 <br>
 	
-		<label for="check">I agreee to TOS</label>
+		<label for="check">I agreee to the TOS</label>
 	<input type="checkbox" id="tos" required>
 		<input type="submit" value="submit">
 </form>
