--- a/main.html
+++ b/main.html
@@ -19,15 +19,15 @@
 <br>
 
 		<label for="name">Gender :</label>
-		<lable for="gender-m">Male</lable>
+		<label for="gender-m">Male</lable>
 	<input type="radio" id="gender-m" name="gender"required>
-		<lable for="gender-f">Female</lable>
+		<label for="gender-f">Female</lable>
 		
 	<input type="radio" id="gender-f" name="gender"required>
 <br>
 	
 		<label for="car">Car Brands</label>
-<select name="place id="place>
+<select name="cars" id="cars">
 	<option value="BMW" >BMW</option>
 	<option value="Lemborgini">Lemborgini</option>
 	<option value="mercedes">Mercides</option>
@@ -38,11 +38,11 @@
 		<label for="age">Age</label>
 	<input type="number" id="age" required placeholder="Age"> 
 	<label for="dob">DOB</label>
-	<input text="date" id="dob" required >
+	<input type="date" id="dob" required >
 <br>
 	
 		<label for="tel">Phone Number</label>
-	<input type="number" id="tel" required placeholder="xxx-xxx-xxxx">
+	<input type="tel" id="tel" required placeholder="xxx-xxx-xxxx">
 <br>
 	
 		<label for="password">Password</label>
