--- a/main.html
+++ b/main.html
@@ -51,7 +51,7 @@
 	
 		<label for="check">I agreee to the TOS</label>
 	<input type="checkbox" id="tos" required>
-		<input type="submit" value="submit">
+		<button type="submit">Submit</button>
 </form>
 </body>
 
