--- a/main.html
+++ b/main.html
@@ -28,6 +28,8 @@
 	
 		<label for="car">Car Brands</label>
 <select name="cars" id="cars">
+	<option value="">--Please choose an option--</option>
+	
 	<option value="BMW" >BMW</option>
 	<option value="Lemborgini">Lemborgini</option>
 	<option value="mercedes">Mercides</option>
