--- a/main.html
+++ b/main.html
@@ -19,7 +19,7 @@
 <br>
 
 		<label for="name">Gender :</label>
-		<label for="gender-m">Male</lable>
+		<label for="gender-m">Male</label>
 	<input type="radio" id="gender-m" name="gender"required>
 		<label for="gender-f">Female</lable>
 		
@@ -51,7 +51,7 @@
 	<input type="password" id="password" required placeholder="Password">
 <br>
 	
-		<label for="check">I agreee to the TOS</label>
+		<label for="tos">I agreee to the TOS</label>
 	<input type="checkbox" id="tos" required>
 		<button type="submit">Submit</button>
 </form>
