--- a/main.html
+++ b/main.html
@@ -26,10 +26,9 @@
 	<input type="radio" id="gender-f" name="gender"required>
 <br>
 	
-		<label for="car">Car Brands</label>
+		<label for="cars">Car Brands</label>
 <select name="cars" id="cars">
 	<option value="">--Please choose an option--</option>
-	
 	<option value="BMW" >BMW</option>
 	<option value="Lemborgini">Lemborgini</option>
 	<option value="mercedes">Mercides</option>
